/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

java {
  toolchain {
    languageVersion.set(JavaLanguageVersion.of(17))
  }
}

javafx {
    version = "17"
    modules = ['javafx.controls']
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
    implementation group: 'org.openpnp', name: 'opencv', version: '4.5.4-0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'   
}

application {
    // Define the main class for the application.
    mainClass = 'minesweeperhelper.App'
}

sourceSets {
    main {
         java {
            srcDirs = ['src/main/java','src/main/resources']
         }
    }

    test {
        java {
            srcDirs = ['src/test/java','src/test/resources']
        }
    }
}

test {
    useJUnitPlatform()
}

import org.apache.tools.ant.taskdefs.condition.Os

run {
    jvmArgs = [
            '--enable-preview'
    ]
    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
        systemProperties['java.library.path'] = 'C:/opencv/build/java/x64'
    } else {
        systemProperties['java.library.path'] = '/usr/local/share/java/opencv4'
    }    
}

